archived/sensu-go/6.5/observability-pipeline/observe-transform/_index.md
---
title: "Transform your observation data"
linkTitle: "Transform"
description: "Learn how the transform stage of the Sensu observability pipeline works to mutate your observation data into a format that other technologies can consume."
product: "Sensu Go"
version: "6.5"
weight: 60
layout: "single"
toc: true
menu:
  sensu-go-6.5:
    parent: observability-pipeline
    identifier: observe-transform
---
<svg xmlns="http://www.w3.org/2000/svg" xmlns:xlink="http://www.w3.org/1999/xlink" xmlns:lucid="lucid" viewBox="0 0 1400 405" preserveAspectRatio="xMidYMid meet"><g transform="translate(14.423076923077076 20)" lucid:page-tab-id="0_0"><path d="M0 0h1823.08v553.85H0z" fill="#fff"/><a xlink:href="../observe-schedule/" target="_top"><path d="M668.26 0H1346v304.26H668.26z" stroke="#89c967" stroke-width="2" fill="#f0f0f0"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M668.26 0H1346v304.26H668.26z" fill="none"/></a><a xlink:href="../observe-filter/" target="_top"><path d="M706 143c0-1.66 1.34-3 3-3h161.7c1.67 0 3 1.34 3 3v74c0 1.66-1.33 3-3 3H709c-1.66 0-3-1.34-3-3z" stroke="#89c967" fill="#fff"/><use xlink:href="#a" transform="matrix(1,0,0,1,711.0000194281504,145) translate(49.23988381410256 43.76402243589744)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M706 143c0-1.66 1.34-3 3-3h161.7c1.67 0 3 1.34 3 3v74c0 1.66-1.33 3-3 3H709c-1.66 0-3-1.34-3-3z" fill="none"/></a><a xlink:href="../observe-transform/" target="_top"><path d="M926 143c0-1.66 1.34-3 3-3h161.7c1.67 0 3 1.34 3 3v74c0 1.66-1.33 3-3 3H929c-1.66 0-3-1.34-3-3z" stroke="#89c967" stroke-width="10" fill="#fff"/><use xlink:href="#b" transform="matrix(1,0,0,1,931.0000194281495,145) translate(18.72230568910257 43.76402243589744)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M926 143c0-1.66 1.34-3 3-3h161.7c1.67 0 3 1.34 3 3v74c0 1.66-1.33 3-3 3H929c-1.66 0-3-1.34-3-3z" fill="none"/></a><a xlink:href="../observe-process/" target="_top"><path d="M1146 143c0-1.66 1.34-3 3-3h161.7c1.67 0 3 1.34 3 3v74c0 1.66-1.33 3-3 3H1149c-1.66 0-3-1.34-3-3z" stroke="#89c967" fill="#fff"/><use xlink:href="#c" transform="matrix(1,0,0,1,1151.0000194281486,145) translate(32.23142027243589 43.76402243589744)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M1146 143c0-1.66 1.34-3 3-3h161.7c1.67 0 3 1.34 3 3v74c0 1.66-1.33 3-3 3H1149c-1.66 0-3-1.34-3-3z" fill="none"/></a><path d="M641.9 180h47.22" stroke="#89c967" fill="none"/><path d="M641.93 180.5h-1.02l.5-.5-.5-.5h1.03z" fill="#89c967"/><path d="M703.88 180l-14.26 4.64v-9.28z" stroke="#89c967" fill="#89c967"/><path d="M874.7 180h29.92" stroke="#89c967" fill="none"/><path d="M874.72 180.5h-.5v-1h.5z" fill="#89c967"/><path d="M919.38 180l-14.26 4.64v-9.28z" stroke="#89c967" fill="#89c967"/><path d="M1099.2 180h29.92" stroke="#89c967" fill="none"/><path d="M1099.22 180.5h-.5v-1h.5z" fill="#89c967"/><path d="M1143.88 180l-14.26 4.64v-9.28z" stroke="#89c967" fill="#89c967"/><a xlink:href="../observe-entities/" target="_top"><path d="M5.58 0H500v304.26H5.58z" stroke="#89c967" stroke-width="2" fill="#f0f0f0"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M5.58 0H500v304.26H5.58z" fill="none"/></a><path d="M261 70h20.43v69.5" stroke="#89c967" fill="none"/><path d="M261 70.5h-.5v-1h.5z" fill="#89c967"/><path d="M281.43 139.5v.5M261 140h31.62" stroke="#89c967" fill="none"/><path d="M261 140.5h-.5v-1h.5z" fill="#89c967"/><path d="M307.38 140l-14.26 4.64v-9.28z" stroke="#89c967" fill="#89c967"/><path d="M261 210h20.43v-69.5" stroke="#89c967" fill="none"/><path d="M261 210.5h-.5v-1h.5z" fill="#89c967"/><path d="M281.43 140.5v-.5" stroke="#89c967" fill="none"/><path d="M390 222.5v58.9h190v-19.37" stroke="#89c967" stroke-width="3" fill="none"/><path d="M390 221h.7l.8-.03v1.57h-3v-1.6z" fill="#89c967"/><path d="M580 246.27l4.64 14.26h-9.28z" stroke="#89c967" stroke-width="3" fill="#89c967"/><a xlink:href="../observe-schedule/" target="_top"><path d="M899.36 260h221v40h-221z" stroke="#000" stroke-opacity="0" stroke-width="2" fill-opacity="0"/><use xlink:href="#d" transform="matrix(1,0,0,1,899.3635801059468,260) translate(53.80288461538462 28.471153846153847)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M899.36 260h221v40h-221z" fill="none"/></a><a xlink:href="../observe-entities/" target="_top"><path d="M141 260h223.6v44.26H141z" stroke="#000" stroke-opacity="0" stroke-width="2" fill-opacity="0"/><use xlink:href="#e" transform="matrix(1,0,0,1,140.98668036289064,260) translate(71.86057692307692 28.471153846153847)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M141 260h223.6v44.26H141z" fill="none"/></a><a xlink:href="../observe-events/" target="_top"><path d="M580 120l60 60-60 60-60-60z" stroke="#89c967" stroke-width="2" fill="#e5e5e5"/><use xlink:href="#f" transform="matrix(1,0,0,1,525,125) translate(23.611478365384613 63.76402243589744)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M580 120l60 60-60 60-60-60z" fill="none"/></a><a xlink:href="../observe-schedule/" target="_top"><path d="M470 140c0 44.18-35.82 80-80 80s-80-35.82-80-80 35.82-80 80-80 80 35.82 80 80z" stroke="#89c967" stroke-width="2" fill="#fff"/><use xlink:href="#g" transform="matrix(1,0,0,1,315,65) translate(40.61373197115385 72.49599358974359)"/><use xlink:href="#h" transform="matrix(1,0,0,1,315,65) translate(4.678109975961533 96.59705528846155)"/><use xlink:href="#i" transform="matrix(1,0,0,1,315,65) translate(62.35163762019231 96.59705528846155)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M470 140c0 44.18-35.82 80-80 80s-80-35.82-80-80 35.82-80 80-80 80 35.82 80 80z" fill="none"/></a><path d="M390 221.5V261h10.35v-44.62" stroke="#000" stroke-opacity="0" fill="none"/><path d="M400.35 201.62l4.64 14.26h-9.28z" stroke="#000" stroke-opacity="0" fill-opacity="0"/><a xlink:href="../observe-schedule/" target="_top"><path d="M20 43c0-1.66 1.34-3 3-3h234c1.66 0 3 1.34 3 3v54c0 1.66-1.34 3-3 3H23c-1.66 0-3-1.34-3-3z" stroke="#89c967" fill="#fff"/><use xlink:href="#j" transform="matrix(1,0,0,1,25,45) translate(44.63585486778845 21.400490785256405)"/><use xlink:href="#k" transform="matrix(1,0,0,1,25,45) translate(121.06908553685898 21.400490785256405)"/><use xlink:href="#l" transform="matrix(1,0,0,1,25,45) translate(50.15249399038461 44.719050480769226)"/><use xlink:href="#m" transform="matrix(1,0,0,1,25,45) translate(122.50262920673077 44.719050480769226)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M20 43c0-1.66 1.34-3 3-3h234c1.66 0 3 1.34 3 3v54c0 1.66-1.34 3-3 3H23c-1.66 0-3-1.34-3-3z" fill="none"/></a><a xlink:href="../observe-schedule/" target="_top"><path d="M20 113c0-1.66 1.34-3 3-3h234c1.66 0 3 1.34 3 3v54c0 1.66-1.34 3-3 3H23c-1.66 0-3-1.34-3-3z" stroke="#89c967" fill="#fff"/><use xlink:href="#n" transform="matrix(1,0,0,1,25,115) translate(40.292186247996796 21.400490785256405)"/><use xlink:href="#o" transform="matrix(1,0,0,1,25,115) translate(112.97879732572116 21.400490785256405)"/><use xlink:href="#p" transform="matrix(1,0,0,1,25,115) translate(11.991436298076906 44.719050480769226)"/><use xlink:href="#q" transform="matrix(1,0,0,1,25,115) translate(158.83263221153848 44.719050480769226)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M20 113c0-1.66 1.34-3 3-3h234c1.66 0 3 1.34 3 3v54c0 1.66-1.34 3-3 3H23c-1.66 0-3-1.34-3-3z" fill="none"/></a><a xlink:href="../observe-schedule/" target="_top"><path d="M20 183c0-1.66 1.34-3 3-3h234c1.66 0 3 1.34 3 3v54c0 1.66-1.34 3-3 3H23c-1.66 0-3-1.34-3-3z" stroke="#89c967" fill="#fff"/><use xlink:href="#r" transform="matrix(1,0,0,1,25,185) translate(53.57515775240384 21.400490785256405)"/><use xlink:href="#s" transform="matrix(1,0,0,1,25,185) translate(32.30675330528845 44.719050480769226)"/><use xlink:href="#t" transform="matrix(1,0,0,1,25,185) translate(116.04698768028847 44.719050480769226)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M20 183c0-1.66 1.34-3 3-3h234c1.66 0 3 1.34 3 3v54c0 1.66-1.34 3-3 3H23c-1.66 0-3-1.34-3-3z" fill="none"/></a><a xlink:href="../" target="_top"><path d="M400 320h507.7v44H400z" stroke="#000" stroke-opacity="0" stroke-width="2" fill-opacity="0"/><use xlink:href="#u" transform="matrix(1,0,0,1,400,320) translate(14.36940418397478 36.19764280232888)"/><use xlink:href="#v" transform="matrix(1,0,0,1,400,320) translate(119.95503095996753 36.19764280232888)"/><use xlink:href="#w" transform="matrix(1,0,0,1,400,320) translate(356.5049763247307 36.19764280232888)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M400 320h507.7v44H400z" fill="none"/></a><a xlink:href="../observe-schedule/" target="_top"><path d="M706 63c0-1.66 1.34-3 3-3h601.7c1.67 0 3 1.34 3 3v54c0 1.66-1.33 3-3 3H709c-1.66 0-3-1.34-3-3z" stroke="#89c967" fill="#fff"/><use xlink:href="#x" transform="matrix(1,0,0,1,711.0000194281504,65) translate(245.60206330128204 33.76402243589744)"/><path class="lucid-link lucid-hotspot lucid-overlay-hotspot" d="M706 63c0-1.66 1.34-3 3-3h601.7c1.67 0 3 1.34 3 3v54c0 1.66-1.33 3-3 3H709c-1.66 0-3-1.34-3-3z" fill="none"/></a><path d="M518.1 180h-23.3v-40h-7.42" stroke="#000" stroke-opacity="0" fill="none"/><path d="M472.62 140l14.26-4.64v9.28z" stroke="#000" stroke-opacity="0" fill-opacity="0"/><path d="M1009.86 58V20H390v18.38" stroke="#89c967" stroke-width="3" fill="none"/><path d="M1011.36 59.5h-3v-1.54h3z" fill="#89c967"/><path d="M390 54.15l-4.64-14.27h9.28z" stroke="#89c967" stroke-width="3" fill="#89c967"/><defs><path fill="#2c3458" d="M1006-595H430V0H130v-1456h948v243H430v376h576v242" id="y"/><path fill="#2c3458" d="M416 0H126v-1082h290V0zM271-1212c-92 0-162-61-162-150s68-149 162-149c93 0 162 60 162 149s-70 150-162 150" id="z"/><path fill="#2c3458" d="M416 0H126v-1536h290V0" id="A"/><path fill="#2c3458" d="M457-330c2 83 25 111 111 112 32 0 60-2 85-7V-6c-57 17-115 26-175 26-203 0-310-102-310-307v-583H10v-212h158v-266h289v266h185v212H457v540" id="B"/><path fill="#2c3458" d="M1031-175C952-60 797 20 609 20 287 20 60-206 72-543c12-330 180-559 505-559 309 0 482 214 477 537v118H365c15 134 115 234 263 234 111 0 198-40 261-121zM770-644c5-139-62-226-194-224-130 1-191 97-208 224h402" id="C"/><path fill="#2c3458" d="M719-811c-143-24-279 1-319 103V0H111v-1082h273l8 129c74-124 180-175 331-136" id="D"/><g id="a"><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,0,0)" xlink:href="#y"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,14.047475961538462,0)" xlink:href="#z"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,20.845853365384617,0)" xlink:href="#A"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,27.64423076923077,0)" xlink:href="#B"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,36.30809294871795,0)" xlink:href="#C"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,50.16776842948718,0)" xlink:href="#D"/></g><path fill="#2c3458" d="M1226-1213H780V0H480v-1213H40v-243h1186v243" id="E"/><path fill="#2c3458" d="M552-1102c254-4 435 134 435 383v469c1 103 15 180 43 233V0H738c-13-26-23-58-29-97C639-19 548 20 436 20 238 20 64-113 68-304c5-258 212-357 496-357h133c11-137-29-227-160-227-90 0-156 45-156 131H92c15-231 213-342 460-345zM357-325c0 76 61 124 142 124 88 0 168-45 198-105v-186H589c-152 2-232 51-232 167" id="F"/><path fill="#2c3458" d="M750-692c-1-124-48-174-173-175-81 0-142 35-183 104V0H105v-1082h272l9 125c77-97 181-145 311-145 244 0 342 151 342 403V0H750v-692" id="G"/><path fill="#2c3458" d="M529-185c94 0 168-33 168-114 0-35-18-63-53-83s-91-39-168-55C219-491 90-600 90-765c0-208 203-337 432-337 246 0 451 124 453 349H686c-2-91-62-143-165-143-86 0-151 41-153 117 0 32 16 57 46 77 63 43 257 69 335 100 151 60 229 153 229 291C978-13 554 93 282-28 162-81 60-190 56-344h274c5 106 86 159 199 159" id="H"/><path fill="#2c3458" d="M190-1174c-11-296 244-440 544-363l-3 224c-24-6-53-9-88-9-109 0-163 51-163 153v87h215v212H480V0H190v-870H29v-212h161v-92" id="I"/><path fill="#2c3458" d="M579 20C257 20 58-214 66-551c8-331 182-551 511-551 324 0 514 231 514 572 0 319-198 550-512 550zm-2-888c-169 0-222 141-222 338 0 181 61 317 224 317 170 0 223-137 223-338 0-178-64-317-225-317" id="J"/><path fill="#2c3458" d="M741-689c-2-124-40-177-163-178-82 0-141 34-178 102V0H111v-1082h271l9 121c77-94 180-141 311-141 139 0 235 55 287 165 76-110 184-165 325-165 249 0 348 151 348 411V0h-290v-690c-2-123-39-176-163-177-87 0-147 41-180 124l1 743H741v-689" id="K"/><g id="b"><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,0,0)" xlink:href="#E"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,15.049078525641026,0)" xlink:href="#D"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,24.025941506410255,0)" xlink:href="#F"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,37.77293669871795,0)" xlink:href="#G"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,52.13341346153847,0)" xlink:href="#H"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,65.31700721153845,0)" xlink:href="#I"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,74.50671073717947,0)" xlink:href="#J"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,89.00490785256409,0)" xlink:href="#D"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,98.35737179487178,0)" xlink:href="#K"/></g><path fill="#2c3458" d="M1245-974c0 302-233 466-552 461H430V0H130v-1456h568c323 5 547 167 547 482zm-303 2c1-143-93-241-237-241H430v457h268c151 1 244-71 244-216" id="L"/><path fill="#2c3458" d="M355-556c-2 203 30 338 206 343 102 3 181-63 182-161h271C1001-128 821 17 566 20 242 24 66-212 66-554c0-320 184-548 498-548 262 0 451 167 450 423H743c-1-108-75-193-184-189-162 6-202 123-204 312" id="M"/><g id="c"><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,0,0)" xlink:href="#L"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,16.53896233974359,0)" xlink:href="#D"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,25.44070512820513,0)" xlink:href="#J"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,39.93890224358975,0)" xlink:href="#M"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,53.310296474358985,0)" xlink:href="#C"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,67.16997195512822,0)" xlink:href="#H"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,80.35356570512822,0)" xlink:href="#H"/></g><path fill="#2c3458" d="M966-754c170 42 282 125 282 315 0 303-231 439-546 439H120v-1457h536c319 4 558 86 558 394 0 177-112 257-248 309zm-52 308c1-132-85-172-220-172H458v363h238c138 0 217-58 218-191zm-38-577c0-140-81-181-220-181H458v360c201-1 418 30 418-179" id="N"/><path fill="#2c3458" d="M572-1057c257 0 406 153 406 409V0c-68-4-160 9-208-12-30-14-45-72-60-107C623-47 539 18 382 16 189 13 70-77 70-270c0-183 145-251 311-298 78-21 176-33 295-36 8-132-26-216-144-216-125 0-159 78-268 78-94 0-104-95-146-151 112-100 257-164 454-164zM366-285c-2 73 41 96 114 96 97 0 140-35 196-89v-144c-104 4-184 15-248 46-39 19-61 43-62 91" id="O"/><path fill="#2c3458" d="M958-162C862-50 728 16 528 16 297 16 159-117 90-293c-49-124-51-307-4-437 70-194 223-323 484-323 177 0 287 60 380 153-36 45-67 98-109 136-73 33-113-34-174-50-21-5-46-11-77-11-169 4-215 131-220 304-6 205 103 354 302 295 57-17 74-74 140-74 25 0 42 10 56 27" id="P"/><path fill="#2c3458" d="M430-1497v839c57 1 95 0 120-37l196-292c22-33 48-50 100-50h284L862-668c-25 34-54 60-90 82 30 23 56 53 78 90L1142 0H862c-52-1-83-16-102-52L564-419c-19-31-28-40-74-40h-60V0H120v-1497h310" id="Q"/><path fill="#2c3458" d="M1024-162C926-48 781 16 578 16 325 16 169-111 94-299c-49-123-59-309-6-439 74-183 225-315 476-315 298 0 466 176 466 475 0 66-3 115-70 115H362c16 155 90 243 244 247 98 2 155-39 218-71 37-18 85-16 110 14zM752-643c-3-120-60-196-182-196-129 0-185 80-205 196h387" id="R"/><path fill="#2c3458" d="M612-820c-81 1-134 39-182 81V0H120v-1037h192c70-3 79 59 94 112 74-70 159-128 302-128 236 0 352 157 352 394V0H750v-659c0-96-44-162-138-161" id="S"/><path fill="#2c3458" d="M494-1057c110-3 175 36 236 85v-525h310V0H848c-79 3-80-75-100-131C671-51 581 16 426 16 225 16 127-123 78-290c-38-128-40-313 4-440 62-181 183-321 412-327zM370-515c0 153 21 293 164 293 98 0 150-43 196-97v-440c-41-45-87-70-162-70-160 0-198 144-198 314" id="T"/><g id="d"><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,0,0)" xlink:href="#N"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,18.923076923076923,0)" xlink:href="#O"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,34.47115384615385,0)" xlink:href="#P"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,48.49038461538461,0)" xlink:href="#Q"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,64.24038461538461,0)" xlink:href="#R"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,79.9326923076923,0)" xlink:href="#S"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,96.66346153846153,0)" xlink:href="#T"/></g><path fill="#2c3458" d="M1058-1457v260H460v340h458v250H460v347h598V0H120v-1457h938" id="U"/><path fill="#2c3458" d="M774-74c-71 55-172 90-290 90-196 0-304-108-304-303v-536c-70 1-146 12-146-61v-121l165-32 61-253c16-78 146-38 230-48v303h252v212H490v515c0 45 23 83 68 83 48 0 88-50 122 4" id="V"/><path fill="#2c3458" d="M440-1037V0H130v-1037h310zm-154-466c113 0 190 70 190 182 0 111-79 180-190 180-109 0-184-71-184-180 0-110 74-182 184-182" id="W"/><path fill="#2c3458" d="M544 269c-20 41-37 60-98 60H214L414-91 0-1037h274c46-1 73 23 84 54 69 190 150 371 209 571 68-189 134-380 199-571 10-28 45-55 82-54h250" id="X"/><g id="e"><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,0,0)" xlink:href="#U"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,16.298076923076923,0)" xlink:href="#S"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,33.02884615384615,0)" xlink:href="#V"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,44.56730769230769,0)" xlink:href="#W"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,52.78846153846154,0)" xlink:href="#V"/><use transform="matrix(0.014423076923076924,0,0,0.014423076923076924,64.32692307692308,0)" xlink:href="#X"/></g><path fill="#2c3458" d="M1006-631H430v390h676V0H130v-1456h974v243H430v347h576v235" id="Y"/><path fill="#2c3458" d="M516-353l201-729h302L654 0H378L13-1082h302" id="Z"/><g id="f"><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,0,0)" xlink:href="#Y"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,14.097556089743591,0)" xlink:href="#Z"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,26.893028846153847,0)" xlink:href="#C"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,40.75270432692308,0)" xlink:href="#G"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,55.11318108974359,0)" xlink:href="#B"/></g><path fill="#2c3458" d="M952-300H426L326 0H7l542-1456h278L1372 0h-319zM507-543h364l-183-545" id="aa"/><path fill="#2c3458" d="M505 20C221 18 69-239 69-549c0-302 153-553 438-553 119 0 211 41 277 122l12-102h262V-36c-8 305-208 458-520 462-160 1-335-76-403-170L263 80c72 81 159 121 262 121 172 1 260-107 243-294C701-18 614 20 505 20zm76-887c-165 0-223 147-223 339 0 172 66 314 221 314 88 0 151-33 189-99v-455c-39-66-101-99-187-99" id="ab"/><g id="g"><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,0,0)" xlink:href="#aa"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,17.252604166666668,0)" xlink:href="#ab"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,31.888521634615387,0)" xlink:href="#C"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,45.74819711538462,0)" xlink:href="#G"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,60.10867387820513,0)" xlink:href="#B"/></g><path fill="#2c3458" d="M319-664C304-226 428 158 661 357l-38 113c-89-49-172-133-254-248C142-97 71-578 194-1025c67-244 240-513 429-618l38 122c-201 153-330 502-342 857" id="ac"/><path fill="#2c3458" d="M599-131c141 0 220-65 285-146l113 88C906-50 770 20 589 20 281 21 93-214 93-545c0-223 93-397 233-485 74-48 154-72 240-72 300 2 449 218 445 537v77H278c0 197 129 357 321 357zm227-509c-3-180-88-310-260-310-170 0-264 140-282 310h542" id="ad"/><path fill="#2c3458" d="M497-251l268-831h189L566 0H425L33-1082h189" id="ae"/><path fill="#2c3458" d="M589-945c-131 0-219 81-264 174V0H140v-1082h175l6 136c83-104 191-156 324-156 229 0 346 129 346 387V0H806v-716c-2-153-65-229-217-229" id="af"/><path fill="#2c3458" d="M456 20C285 20 205-92 206-268v-671H9v-143h197v-262h185v262h202v143H391v671c-9 125 92 149 207 118V0c-49 13-96 20-142 20" id="ag"/><g id="h"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#ac"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,6.5730168269230775,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,16.639122596153847,0)" xlink:href="#ae"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,25.831956129807693,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,36.02013221153847,0)" xlink:href="#af"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,46.63085937500001,0)" xlink:href="#ag"/></g><path fill="#2c3458" d="M632-1102c291 0 422 251 422 573 0 297-141 548-419 549-131 0-235-42-310-125v521H140v-1498h169l9 120c75-93 180-140 314-140zm-53 971c207 0 290-180 290-419 0-218-92-395-292-395-112 0-196 50-252 149v517c55 99 140 148 254 148" id="ah"/><path fill="#2c3458" d="M663-916c-163-27-288 18-338 148V0H140v-1082h180l3 125c61-97 147-145 258-145 36 0 63 5 82 14v172" id="ai"/><path fill="#2c3458" d="M584 20C278 26 81-227 91-551c10-320 175-545 491-551 308-5 503 247 494 573-9 322-175 543-492 549zm-2-970c-208 0-305 185-305 421 0 216 106 398 307 398 211 0 307-186 307-420 0-214-109-399-309-399" id="aj"/><path fill="#2c3458" d="M520 20C244 20 95-247 95-550c0-298 151-550 427-552 127 0 227 43 301 130v-564h185V0H838l-9-116C755-25 652 20 520 20zm48-965c-210 0-288 177-288 416 0 218 87 392 286 392 117 0 203-53 257-158v-497c-55-102-140-153-255-153" id="ak"/><path fill="#2c3458" d="M491 20c-241-1-355-148-355-398v-704h185v699c0 164 67 246 200 246 141 0 235-53 282-158v-787h185V0H812l-4-107C736-22 630 20 491 20" id="al"/><path fill="#2c3458" d="M277-555c0 244 77 420 297 424 127 2 249-93 255-210h175C980-127 805 20 574 20 258 20 81-222 92-562c11-319 164-533 481-540 237-5 426 165 431 392H829c-7-133-115-242-256-240-209 4-296 166-296 395" id="am"/><path fill="#2c3458" d="M38 357C331 141 457-487 337-984c-53-219-157-429-299-546l39-113c190 106 362 378 431 621 75 268 76 597 0 868C440 88 266 365 77 470" id="an"/><g id="i"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#ah"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,10.789137620192308,0)" xlink:href="#ai"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,17.108623798076927,0)" xlink:href="#aj"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,28.076171875000007,0)" xlink:href="#ak"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,38.921649639423094,0)" xlink:href="#al"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,49.52298677884617,0)" xlink:href="#am"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,59.589092548076934,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,69.77726862980771,0)" xlink:href="#ai"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,76.28455528846155,0)" xlink:href="#an"/></g><path fill="#2c3458" d="M1314 0h-300L430-958V0H130v-1456h300l585 960v-960h299V0" id="ao"/><g id="j"><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,0,0)" xlink:href="#ao"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,15.840970552884617,0)" xlink:href="#F"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,27.86959134615385,0)" xlink:href="#ab"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,40.67601913060898,0)" xlink:href="#z"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,46.624599358974365,0)" xlink:href="#J"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,59.310521834935905,0)" xlink:href="#H"/></g><path fill="#2c3458" d="M463 20c-241-1-359-147-359-393v-709h289v699c0 113 51 169 154 169 98 0 165-34 202-102v-766h290V0H767l-8-110C688-23 589 20 463 20" id="ap"/><g id="k"><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,0,0)" xlink:href="#L"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,14.471592047275642,0)" xlink:href="#A"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,20.42017227564103,0)" xlink:href="#ap"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,32.97463441506411,0)" xlink:href="#ab"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,45.78106219951925,0)" xlink:href="#z"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,51.72964242788463,0)" xlink:href="#G"/></g><path fill="#2c3458" d="M538-131c121 0 232-49 232-156 0-50-20-88-56-117-73-60-334-92-420-143-92-55-162-110-162-238 0-190 192-317 400-317 223 0 414 129 413 338H759c0-108-110-186-227-186-119 0-215 53-215 159 0 45 18 78 53 101 76 52 331 90 416 139 98 57 169 115 169 251C955-92 760 20 538 20c-176 0-314-68-386-174-38-55-57-115-57-179h185c6 129 116 202 258 202" id="aq"/><path fill="#2c3458" d="M341 0H156v-1082h185V0zm-91-1264c-68 0-108-42-109-105 0-62 41-107 109-107s110 44 110 107-42 105-110 105" id="ar"/><g id="l"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#ac"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,6.5730168269230775,0)" xlink:href="#aq"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,16.488882211538463,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,26.677058293269234,0)" xlink:href="#ai"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,33.35336538461539,0)" xlink:href="#ae"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,42.66826923076923,0)" xlink:href="#ar"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,47.33511117788462,0)" xlink:href="#am"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,57.40121694711539,0)" xlink:href="#ad"/></g><path fill="#2c3458" d="M589-945c-131 0-219 81-264 174V0H140v-1536h185v585c82-101 189-151 320-151 229 0 346 129 346 387V0H806v-716c-2-153-65-229-217-229" id="as"/><path fill="#2c3458" d="M442-501L326-380V0H141v-1536h185v929c135-169 291-317 436-475h225L566-630 1036 0H819" id="at"/><g id="m"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#am"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,10.06610576923077,0)" xlink:href="#as"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,20.658052884615387,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,30.846228966346157,0)" xlink:href="#am"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,40.91233473557693,0)" xlink:href="#at"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,50.65917968750001,0)" xlink:href="#an"/></g><path fill="#2c3458" d="M658-217c127 0 227-49 227-165 0-57-21-98-60-130-79-64-370-142-463-196-162-95-248-210-248-361 0-280 246-403 537-407 213-3 383 84 467 216 45 69 68 147 68 234H886c0-139-96-211-240-211-129 0-232 55-232 169 0 47 24 87 72 119s117 62 210 90c171 51 295 115 373 191s117 171 117 284c-2 272-237 411-528 404C331 13 78-135 69-458h301c0 161 96 241 288 241" id="au"/><path fill="#2c3458" d="M130 0v-1456h448c435 14 673 299 665 762-5 285-130 500-319 606C822-31 708 0 581 0H130zm809-685c9-311-79-526-361-528H430v972h145c252-2 356-181 364-444" id="av"/><g id="n"><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,0,0)" xlink:href="#au"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,13.792380308493591,0)" xlink:href="#B"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,21.373259715544876,0)" xlink:href="#F"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,33.40188050881411,0)" xlink:href="#B"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,40.982759915865394,0)" xlink:href="#H"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,52.51840444711539,0)" xlink:href="#av"/></g><path fill="#2c3458" d="M522-1456L896-400l372-1056h394V0h-301c-7-379 15-728 30-1085L998 0H792L400-1084c15 357 37 705 30 1084H130v-1456h392" id="aw"/><g id="o"><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,0,0)" xlink:href="#aw"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,19.6533203125,0)" xlink:href="#C"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,31.78053635817308,0)" xlink:href="#B"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,39.361415765224365,0)" xlink:href="#D"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,47.54482171474359,0)" xlink:href="#z"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,53.49340194310899,0)" xlink:href="#M"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,65.19337189503206,0)" xlink:href="#H"/></g><path fill="#2c3458" d="M1240-945c-141 0-250 95-250 227V0H804v-709c0-157-77-236-231-236-121 0-204 52-249 155V0H139v-1082h175l5 120c79-93 186-140 321-140 151 0 254 58 309 174 69-98 181-174 345-174 237 0 362 126 362 377V0h-185v-714c-2-159-67-231-231-231" id="ax"/><path fill="#2c3458" d="M561-1102c238-4 403 126 403 351v498c0 99 13 178 38 237V0H808c-11-21-19-59-26-114C696-25 593 20 474 20c-199 0-368-130-365-320 4-251 214-359 490-356h180v-85c-1-135-86-212-229-212-115 0-232 67-233 171H131c20-205 206-316 430-320zM294-326c0 117 90 185 207 185 122 0 239-75 278-162v-222H634c-227 0-340 66-340 199" id="ay"/><g id="p"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#ac"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,6.5730168269230775,0)" xlink:href="#ar"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,11.239858774038463,0)" xlink:href="#af"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,21.850585937500004,0)" xlink:href="#aq"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,31.76645132211539,0)" xlink:href="#ag"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,38.04837740384616,0)" xlink:href="#ai"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,44.55566406250001,0)" xlink:href="#al"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,55.15700120192309,0)" xlink:href="#ax"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,72.01209435096155,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,82.20027043269232,0)" xlink:href="#af"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,92.81099759615388,0)" xlink:href="#ag"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,99.09292367788464,0)" xlink:href="#ay"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,109.5534104567308,0)" xlink:href="#ag"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,115.83533653846158,0)" xlink:href="#ar"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,120.50217848557696,0)" xlink:href="#aj"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,131.46972656250003,0)" xlink:href="#af"/></g><path fill="#2c3458" d="M341 0H156v-1536h185V0" id="az"/><path fill="#2c3458" d="M634-1102c292 0 422 254 422 573 0 298-143 547-420 549-137 0-242-48-317-145L310 0H140v-1536h185v573c75-93 178-139 309-139zm-44 965c207 0 281-175 281-413 0-224-79-395-283-395-122 0-210 57-263 170v468c57 113 145 170 265 170" id="aA"/><path fill="#2c3458" d="M494-271l252-811h198L509 167C425 381 299 474 84 421V271c167 16 242-37 283-173l41-110L22-1082h202" id="aB"/><g id="q"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#az"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,4.666841947115385,0)" xlink:href="#ar"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,9.33368389423077,0)" xlink:href="#aA"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,20.12282151442308,0)" xlink:href="#ai"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,26.254507211538467,0)" xlink:href="#ay"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,36.71499399038462,0)" xlink:href="#ai"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,43.391301081730774,0)" xlink:href="#aB"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,52.49023437500001,0)" xlink:href="#an"/></g><path fill="#2c3458" d="M750-685c-1-124-48-182-173-182-85 0-146 33-184 98V0H104v-1536h289v572c77-92 173-138 289-138 235 0 357 136 357 409V0H750v-685" id="aC"/><g id="r"><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,0,0)" xlink:href="#L"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,14.471592047275642,0)" xlink:href="#D"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,22.26061698717949,0)" xlink:href="#J"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,34.94653946314103,0)" xlink:href="#K"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,54.36980418669872,0)" xlink:href="#C"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,66.4970202323718,0)" xlink:href="#B"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,74.07789963942308,0)" xlink:href="#aC"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,86.63236177884616,0)" xlink:href="#C"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,98.75957782451924,0)" xlink:href="#ap"/><use transform="matrix(0.010955028044871796,0,0,0.010955028044871796,111.31403996394232,0)" xlink:href="#H"/></g><path fill="#2c3458" d="M177 125H18l608-1581h158" id="aD"/><g id="s"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#ac"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,6.5730168269230775,0)" xlink:href="#aD"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,14.498197115384617,0)" xlink:href="#ax"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,31.35329026442308,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,41.541466346153854,0)" xlink:href="#ag"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,47.82339242788463,0)" xlink:href="#ai"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,54.33067908653848,0)" xlink:href="#ar"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,58.99752103365386,0)" xlink:href="#am"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,69.06362680288463,0)" xlink:href="#aq"/></g><g id="t"><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,0,0)" xlink:href="#ad"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,10.18817608173077,0)" xlink:href="#af"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,20.79890324519231,0)" xlink:href="#ak"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,31.644381009615383,0)" xlink:href="#ah"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,42.433518629807686,0)" xlink:href="#aj"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,53.401066706730774,0)" xlink:href="#ar"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,58.06790865384616,0)" xlink:href="#af"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,68.67863581730771,0)" xlink:href="#ag"/><use transform="matrix(0.00939002403846154,0,0,0.00939002403846154,74.96056189903848,0)" xlink:href="#an"/></g><path fill="#89c967" d="M524-252c120-1 200-49 194-169-8-162-195-164-324-209-183-64-330-162-324-410 5-208 127-332 287-396 178-72 447-26 571 54 32 21 62 40 88 64l-84 157c-19 43-73 61-124 33-64-36-131-79-234-79-114 0-188 47-188 150 0 109 114 131 206 161 219 72 447 139 444 429-3 234-123 379-300 445-265 98-584-9-722-154l100-158c22-40 88-51 134-21 74 48 151 104 276 103" id="aE"/><path fill="#89c967" d="M1024-162C926-48 781 16 578 16 325 16 169-111 94-299c-49-123-59-309-6-439 74-183 225-315 476-315 298 0 466 176 466 475 0 66-3 115-70 115H362c16 155 90 243 244 247 98 2 155-39 218-71 37-18 85-16 110 14zM752-643c-3-120-60-196-182-196-129 0-185 80-205 196h387" id="aF"/><path fill="#89c967" d="M612-820c-81 1-134 39-182 81V0H120v-1037h192c70-3 79 59 94 112 74-70 159-128 302-128 236 0 352 157 352 394V0H750v-659c0-96-44-162-138-161" id="aG"/><path fill="#89c967" d="M56-725c5-259 241-361 518-318 104 16 188 63 250 124l-70 109c-15 22-27 35-60 35-81 0-126-60-222-60-69 0-122 24-122 85 0 75 88 87 152 109 156 54 328 97 328 304C830-90 649 16 394 16 236 16 110-38 22-112c35-48 58-109 103-146 116-42 152 74 285 65 73-5 130-23 130-90 0-78-87-92-154-113C219-449 52-505 56-725" id="aH"/><path fill="#89c967" d="M452 16c-236 0-352-157-352-395v-658h310v658c0 97 43 162 138 161 82-1 133-37 182-80v-739h310V0H848c-67 5-80-61-95-112C679-41 594 16 452 16" id="aI"/><g id="u"><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,0,0)" xlink:href="#aE"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,19.877530292666922,0)" xlink:href="#aF"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,39.82840940560199,0)" xlink:href="#aG"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,61.09956728336364,0)" xlink:href="#aH"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,77.23630774235524,0)" xlink:href="#aI"/></g><path fill="#2c3458" d="M1504-1022c73 177 73 411 0 587-110 265-336 451-702 451-365 0-594-187-704-451-73-177-73-412 0-588 110-265 339-450 704-450s592 187 702 451zM802-264c280 0 410-182 410-465 0-282-131-465-410-465-281 0-412 182-412 465 0 284 130 465 412 465" id="aJ"/><path fill="#2c3458" d="M666 16c-127 3-195-56-255-124C401-53 395 0 326 0H120v-1497h310v570c74-71 163-129 304-126 201 5 299 137 348 303 38 127 40 313-4 439-63 179-182 322-412 327zm124-543c0-153-21-288-164-293-99-3-151 43-196 98v440c40 45 88 70 162 70 160 0 198-144 198-315" id="aK"/><path fill="#2c3458" d="M56-725c5-259 241-361 518-318 104 16 188 63 250 124l-70 109c-15 22-27 35-60 35-81 0-126-60-222-60-69 0-122 24-122 85 0 75 88 87 152 109 156 54 328 97 328 304C830-90 649 16 394 16 236 16 110-38 22-112c35-48 58-109 103-146 116-42 152 74 285 65 73-5 130-23 130-90 0-78-87-92-154-113C219-449 52-505 56-725" id="aL"/><path fill="#2c3458" d="M768-795c-14 65-88 29-146 29-81 0-145 43-192 130V0H120v-1037c73 2 156-8 222 4 64 11 52 105 69 166 65-96 144-190 283-190 47 0 85 11 114 34" id="aM"/><path fill="#2c3458" d="M694 0H412L10-1037h258c43-1 77 23 86 54 69 227 146 446 203 684 58-239 142-456 211-684 10-29 42-55 82-54h246" id="aN"/><path fill="#2c3458" d="M440-1497V0H130v-1497h310" id="aO"/><g id="v"><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,0,0)" xlink:href="#aJ"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,29.33952810725745,0)" xlink:href="#aK"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,50.6106859850191,0)" xlink:href="#aL"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,66.7474264440107,0)" xlink:href="#R"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,86.69830555694577,0)" xlink:href="#aM"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,101.84483694231743,0)" xlink:href="#aN"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,122.12578574645914,0)" xlink:href="#O"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,141.89329280872386,0)" xlink:href="#aK"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,163.1644506864855,0)" xlink:href="#W"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,173.61665757469598,0)" xlink:href="#aO"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,184.06886446290645,0)" xlink:href="#W"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,194.5210713511169,0)" xlink:href="#V"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,209.19083540474566,0)" xlink:href="#X"/></g><path fill="#2c3458" d="M1220-981c0 346-230 490-586 494H458V0H120v-1457h514c350 4 586 140 586 476zm-338 0c0-152-92-223-248-223H458v462h176c169 2 248-80 248-239" id="aP"/><path fill="#2c3458" d="M666 16c-111 3-175-34-236-85v398H120v-1366h192c78-3 80 73 99 128 76-81 169-148 323-148 201 0 299 140 348 307 38 128 40 313-4 439-63 179-182 321-412 327zm124-543c0-153-21-288-164-293-99-3-151 43-196 98v440c40 45 88 70 162 70 160 0 198-144 198-315" id="aQ"/><g id="w"><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,0,0)" xlink:href="#aP"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,23.39827366553782,0)" xlink:href="#W"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,33.850480553748284,0)" xlink:href="#aQ"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,55.04828961124179,0)" xlink:href="#R"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,74.99916872417685,0)" xlink:href="#aO"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,85.45137561238732,0)" xlink:href="#W"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,95.90358250059779,0)" xlink:href="#S"/><use transform="matrix(0.018337205067035907,0,0,0.018337205067035907,117.17474037835945,0)" xlink:href="#R"/></g><path fill="#2c3458" d="M488 20C204 20 66-234 66-549c0-305 140-551 424-553 105 0 192 39 261 118v-552h290V0H780l-14-115C694-25 601 20 488 20zM355-528c0 176 51 314 207 314 89 0 152-38 189-113v-427c-36-75-98-113-187-113-139 0-209 113-209 339" id="aR"/><g id="x"><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,0,0)" xlink:href="#au"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,15.762720352564104,0)" xlink:href="#M"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,29.134114583333336,0)" xlink:href="#aC"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,43.48207131410257,0)" xlink:href="#C"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,57.341746794871796,0)" xlink:href="#aR"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,71.78986378205128,0)" xlink:href="#ap"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,86.13782051282051,0)" xlink:href="#A"/><use transform="matrix(0.012520032051282052,0,0,0.012520032051282052,92.93619791666667,0)" xlink:href="#C"/></g></defs></g>
<!--Source image is observability-pipeline-transform at https://lucid.app/lucidchart/78fc1856-9e9f-43cf-941e-b6e06e88c04e/edit?viewport_loc=-433%2C-343%2C2219%2C1117%2C0_0&invitationId=inv_e6d711c5-e785-4d7b-b1fe-a08269f7fd28#--></svg>

**<button onclick="window.location.href='../observe-process';">Next</button> or click any element in the pipeline to jump to it.**

**In the transform stage, Sensu executes [mutators][1]**.

The transform stage of the Sensu observability pipeline executes any [mutators][1] you have specified in your [pipeline][2] configuration to transform your observability data so other technologies can consume it.
For example, if you're sending metrics to Graphite using a TCP handler, Graphite expects data that follows the Graphite plaintext protocol.
You can use Sensu's [built-in only_check_output mutator][4] to transform the data into the format Graphite can accept.

Here's how transform stage of the pipeline works: first, the Sensu backend receives an event and executes the [filter][3] stage of the observability pipeline.
If the event data meets the conditions, triggers, or thresholds you specified in your event filters, Sensu checks the pipeline for a mutator.
If the pipeline includes a mutator, the Sensu backend executes the mutator.

There are two types of mutators: [pipe][8] and [JavaScript][9].

## Pipe mutators

[Pipe mutator][10] definitions include executable commands that will be executed on a Sensu backend.
Pipe mutators produce an exit status code to indicate state.

* If the mutator executes successfully (that is, returns an exit status code of `0`), Sensu applies the mutator to transform the event data, returns the transformed event data to the handler specified in the pipeline, and executes the handler.
* If the mutator fails to execute (that is, returns a non-zero exit status code or fails to complete within its configured timeout), Sensu logs an error and does not execute the handler specified in the pipeline.

This example pipe mutator resource definition uses the [Sensu Check Status Metric Mutator][7] dynamic runtime asset:

{{< language-toggle >}}

{{< code yml >}}
---
type: Mutator
api_version: core/v2
metadata:
  name: sensu-check-status-metric-mutator
spec:
  command: sensu-check-status-metric-mutator
  runtime_assets:
  - nixwiz/sensu-check-status-metric-mutator
{{< /code >}}

{{< code json >}}
{
  "type": "Mutator",
  "api_version": "core/v2",
  "metadata": {
    "name": "sensu-check-status-metric-mutator"
  },
  "spec": {
    "command": "sensu-check-status-metric-mutator",
    "runtime_assets": [
      "nixwiz/sensu-check-status-metric-mutator"
    ]
  }
}
{{< /code >}}

{{< /language-toggle >}}

Most pipe mutator commands are provided by Sensu plugins, which you can deploy with dynamic runtime assets.
Use [Bonsai][5], the Sensu asset hub, to discover, download, and share dynamic runtime assets for Sensu pipe mutators.
Read [Use assets to install plugins][6] to get started.

## JavaScript mutators

[JavaScript mutators][11] allow you to write your own evaluation expressions and do not require an executable command attribute.
Each Sensu JavaScript mutator definition includes the eval attribute, whose value must be an ECMAScript 5 expression.

This example uses a JavaScript mutator to remove event attributes (in this case, the check name and entity `app_id` label):

{{< language-toggle >}}

{{< code yml >}}
---
type: Mutator
api_version: core/v2
metadata:
  name: remove_checkname_entitylabel
spec:
  eval: >-
    data = JSON.parse(JSON.stringify(event)); delete data.check.metadata.name;
    delete data.entity.metadata.labels.app_id; return JSON.stringify(data)
  type: javascript
{{< /code >}}

{{< code json >}}
{
  "type": "Mutator",
  "api_version": "core/v2",
  "metadata": {
    "name": "remove_checkname_entitylabel"
  },
  "spec": {
    "eval": "data = JSON.parse(JSON.stringify(event)); delete data.check.metadata.name; delete data.entity.metadata.labels.app_id; return JSON.stringify(data)",
    "type": "javascript"
  }
}
{{< /code >}}

{{< /language-toggle >}}


[1]: mutators/
[2]: ../observe-process/pipelines/
[3]: ../observe-filter/
[4]: mutators/#built-in-mutator-only_check_output
[5]: https://bonsai.sensu.io/
[6]: ../../plugins/use-assets-to-install-plugins/
[7]: https://bonsai.sensu.io/assets/nixwiz/sensu-check-status-metric-mutator
[8]: #pipe-mutators
[9]: #javascript-mutators
[10]: mutators/#pipe-mutators
[11]: mutators/#javascript-mutators
